--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
 		<link href="./_app/immutable/assets/0.BXgGbLWn.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.bdzNGcTv.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CtjbvUWl.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CLe_FNpG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C6mq1PFT.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CysfUphQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.skmyyQMX.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CLVCinX3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C-ar6tyi.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.t7bbnnWv.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.BO4VCj0i.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/button.BBSOP44m.js">
@@ -34,7 +34,7 @@
 			
 			<script>
 				{
-					__sveltekit_1hh0fst = {
+					__sveltekit_mgjbpx = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/mizuchilabs.github.io"
 					};
@@ -44,8 +44,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.bdzNGcTv.js"),
-						import("./_app/immutable/entry/app.CLVCinX3.js")
+						import("./_app/immutable/entry/start.CLe_FNpG.js"),
+						import("./_app/immutable/entry/app.C-ar6tyi.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
