--- a/index.html
+++ b/index.html
@@ -17,24 +17,24 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
 		<link href="./_app/immutable/assets/0.BXgGbLWn.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DxCWwLPu.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Dq3pSMpE.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.D_TT5wkL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D3Pbi1sc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CysfUphQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.skmyyQMX.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DSl2mCH4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.grncc8ef.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.t7bbnnWv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BO4VCj0i.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.B2tOjOHs.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/button.BBSOP44m.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CvSbnzh-.js">
 	<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </head>
 
 <body data-sveltekit-preload-data="hover">
-	<div style="display: contents">  <div class="flex min-h-screen flex-col"><header class="w-full py-3 shadow-md dark:bg-pink-800/50"><div class="container mx-auto flex items-center justify-between"><div class="flex flex-row items-center gap-4" data-svelte-h="svelte-1y4oyqb"><img src="/mizuchilabs.github.io/_app/immutable/assets/logo.DxTIdgQX.svg" alt="Mizuchi Labs Logo" width="40"> <div class="flex flex-row items-center gap-1 font-mono text-2xl italic text-primary"><h1 class="opacity-80">Mizuchi</h1> <h1 class="opacity-50">Labs</h1></div></div> <nav><a href="https://github.com/mizuchilabs" class="hover:text-primary" target="_blank" data-svelte-h="svelte-52bakb"><iconify-icon icon="line-md:github-loop" width="24"></iconify-icon></a>  <button type="button" tabindex="0" class="ring-offset-background focus-visible:ring-ring inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent h-10 px-4 py-2 !bg-transparent hover:text-primary" data-button-root=""><iconify-icon icon="line-md:sunny-outline-to-moon-loop-transition" width="24"></iconify-icon></button></nav></div></header> <main class="flex flex-grow flex-col gap-4"> <section class="container mt-12 flex flex-col gap-4"> </section></main> <footer class="bottom-0 flex h-52 w-full flex-col items-center justify-between gap-4 bg-rose-300/50 py-4 dark:bg-pink-800/50"><div class="container flex flex-row items-center justify-between gap-4 pt-8 font-mono text-xl text-primary" data-svelte-h="svelte-1l0u27h"><span></span> <div><span class="opacity-25">Mizuchi</span> <span class="opacity-40">Labs</span></div></div> <div class="container flex flex-row items-center justify-between gap-4 border-t border-primary/15 pt-4"> <div class="flex flex-row items-center gap-1 text-black/70"><iconify-icon icon="fa-regular:copyright" width="16"></iconify-icon> <span class="font-mono text-xs">2024 Mizuchi Labs</span></div>  <div class="flex flex-row items-center gap-2" data-svelte-h="svelte-z79pq3"><span class="font-mono text-sm italic text-black/70">Made with</span> <iconify-icon icon="fluent-emoji-flat:dragon-face" width="24"></iconify-icon></div></div></footer></div> 
+	<div style="display: contents">  <div class="flex min-h-screen flex-col"><header class="w-full py-3 shadow-md dark:bg-pink-800/50"><div class="container mx-auto flex items-center justify-between"><div class="flex flex-row items-center gap-4" data-svelte-h="svelte-1y4oyqb"><img src="/mizuchilabs.github.io/_app/immutable/assets/logo.DxTIdgQX.svg" alt="Mizuchi Labs Logo" width="40"> <div class="flex flex-row items-center gap-1 font-mono text-2xl italic text-primary"><h1 class="opacity-80">Mizuchi</h1> <h1 class="opacity-50">Labs</h1></div></div> <nav><a href="https://github.com/mizuchilabs" class="hover:text-primary" target="_blank" data-svelte-h="svelte-52bakb"><iconify-icon icon="line-md:github-loop" width="24"></iconify-icon></a>  <button type="button" tabindex="0" class="ring-offset-background focus-visible:ring-ring inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent h-10 px-4 py-2 !bg-transparent hover:text-primary" data-button-root=""><iconify-icon icon="line-md:moon-alt-to-sunny-outline-loop-transition" width="24"></iconify-icon></button></nav></div></header> <main class="flex flex-grow flex-col gap-4"> <section class="container mt-12 flex flex-col gap-4"> </section></main> <footer class="bottom-0 flex h-52 w-full flex-col items-center justify-between gap-4 bg-rose-300/50 py-4 dark:bg-pink-800/50"><div class="container flex flex-row items-center justify-between gap-4 pt-8 font-mono text-xl text-primary" data-svelte-h="svelte-1l0u27h"><span></span> <div><span class="opacity-25">Mizuchi</span> <span class="opacity-40">Labs</span></div></div> <div class="container flex flex-row items-center justify-between gap-4 border-t border-primary/15 pt-4"> <div class="flex flex-row items-center gap-1 text-black/70"><iconify-icon icon="fa-regular:copyright" width="16"></iconify-icon> <span class="font-mono text-xs">2024 Mizuchi Labs</span></div>  <div class="flex flex-row items-center gap-2" data-svelte-h="svelte-z79pq3"><span class="font-mono text-sm italic text-black/70">Made with</span> <iconify-icon icon="fluent-emoji-flat:dragon-face" width="24"></iconify-icon></div></div></footer></div> 
 			
 			<script>
 				{
-					__sveltekit_1qqs4zf = {
+					__sveltekit_ifqcrd = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/mizuchilabs.github.io"
 					};
@@ -44,8 +44,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DxCWwLPu.js"),
-						import("./_app/immutable/entry/app.DSl2mCH4.js")
+						import("./_app/immutable/entry/start.D_TT5wkL.js"),
+						import("./_app/immutable/entry/app.grncc8ef.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
