--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
 		<link href="./_app/immutable/assets/0.BXgGbLWn.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.YijxKCnC.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BgMVKJGn.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Bo8FWF6V.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D42Icyuy.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CysfUphQ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.skmyyQMX.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.By-CSw0o.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Bt7X4GXC.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.t7bbnnWv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.B2tOjOHs.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.dO4b51mk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/button.BBSOP44m.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.qt6ZYPoW.js">
 	<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
@@ -34,7 +34,7 @@
 			
 			<script>
 				{
-					__sveltekit_1aez0s6 = {
+					__sveltekit_18ij63f = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -43,8 +43,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.YijxKCnC.js"),
-						import("./_app/immutable/entry/app.By-CSw0o.js")
+						import("./_app/immutable/entry/start.Bo8FWF6V.js"),
+						import("./_app/immutable/entry/app.Bt7X4GXC.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
