--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
 		crossorigin />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	
-		<link href="./_app/immutable/assets/0.-YBIuAyN.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D7vNE9UR.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.BZcpLBnF.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CysfUphQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.skmyyQMX.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.C7J6XbCt.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.t7bbnnWv.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.9QMebYr0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/button.BsTGO4U6.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.YhYjl1Zl.js">
+		<link href="./_app/immutable/assets/0.Bm3Wsk2W.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.CN3voaoG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Bq8wsogU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CVhCRiNp.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.2fbR6mOM.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.-CQDLcP4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.MFepReeK.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CSbaoCbM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.CRArWyaC.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.Bs5IWBWT.js">
 	<script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </head>
 
 <body data-sveltekit-preload-data="hover">
-	<div style="display: contents">  <div class="flex min-h-screen flex-col"><header class="w-full bg-primary/10 py-3 shadow-md backdrop-blur-sm"><div class="container mx-auto flex items-center justify-between"><div class="flex flex-row items-center gap-4" data-svelte-h="svelte-1y4oyqb"><img src="/_app/immutable/assets/logo.DxTIdgQX.svg" alt="Mizuchi Labs Logo" width="40"> <div class="flex flex-row items-center gap-1 font-mono text-2xl italic text-primary"><h1 class="opacity-80">Mizuchi</h1> <h1 class="opacity-50">Labs</h1></div></div> <nav><a href="https://github.com/mizuchilabs" class="hover:text-primary" target="_blank" data-svelte-h="svelte-52bakb"><iconify-icon icon="line-md:github-loop" width="24"></iconify-icon></a>  <button type="button" tabindex="0" class="ring-offset-background focus-visible:ring-ring inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent h-10 px-4 py-2 !bg-transparent hover:text-primary" data-button-root=""><iconify-icon icon="line-md:moon-alt-to-sunny-outline-loop-transition" width="24"></iconify-icon></button></nav></div></header> <main class="flex flex-grow flex-col gap-4"> <section class="container mt-12 flex flex-col gap-4"> </section></main> <footer class="py-38 bottom-0 flex h-52 w-full flex-col items-center justify-between gap-4 bg-primary/10 backdrop-blur-sm"><div class="container flex flex-row items-center justify-between gap-4 pt-8 font-mono text-xl text-primary" data-svelte-h="svelte-tz8eb5"><span></span> <div class="flex flex-row items-center gap-1"><span class="opacity-25">Mizuchi</span> <span class="opacity-40">Labs</span></div></div> <div class="container flex flex-row items-center justify-between gap-4 border-t border-primary/25 py-4"> <div class="flex flex-row items-center gap-1 text-muted-foreground"><iconify-icon icon="fa-regular:copyright" width="16"></iconify-icon> <span class="font-mono text-xs">2024 Mizuchi Labs</span></div>  <div class="flex flex-row items-center gap-2" data-svelte-h="svelte-8hk7qz"><span class="font-mono text-sm italic text-muted-foreground">Made with</span> <iconify-icon icon="fluent-emoji-flat:dragon-face" width="24"></iconify-icon></div></div></footer></div> 
+	<div style="display: contents">  <div class="flex min-h-screen flex-col"><header class="w-full bg-primary/10 py-3 shadow-md backdrop-blur-sm"><div class="container mx-auto flex items-center justify-between"><div class="flex flex-row items-center gap-4" data-svelte-h="svelte-1y4oyqb"><img src="/_app/immutable/assets/logo.DxTIdgQX.svg" alt="Mizuchi Labs Logo" width="40"> <div class="flex flex-row items-center gap-1 font-mono text-2xl italic text-primary"><h1 class="opacity-80">Mizuchi</h1> <h1 class="opacity-50">Labs</h1></div></div> <nav><div class="flex flex-row items-center"> <a href="https://github.com/mizuchilabs" tabindex="0" class="ring-offset-background focus-visible:ring-ring inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent h-10 w-10 !bg-transparent hover:text-primary" target="_blank" data-button-root=""><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide-icon lucide lucide-github"><path d="M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4"></path><path d="M9 18c-4.51 2-5-2-7-2"></path></svg></a>  <a href="https://buymeacoffee.com/d34dscene" tabindex="0" class="ring-offset-background focus-visible:ring-ring inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent h-10 w-10 mr-2 !bg-transparent hover:text-primary" target="_blank" data-button-root=""><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide-icon lucide lucide-coffee"><path d="M10 2v2"></path><path d="M14 2v2"></path><path d="M16 8a1 1 0 0 1 1 1v8a4 4 0 0 1-4 4H7a4 4 0 0 1-4-4V9a1 1 0 0 1 1-1h14a4 4 0 1 1 0 8h-1"></path><path d="M6 2v2"></path></svg></a>  <button type="button" tabindex="0" class="ring-offset-background focus-visible:ring-ring inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 hover:bg-accent h-10 w-10 !bg-transparent hover:text-primary" data-button-root=""><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide-icon lucide lucide-sun"><circle cx="12" cy="12" r="4"></circle><path d="M12 2v2"></path><path d="M12 20v2"></path><path d="m4.93 4.93 1.41 1.41"></path><path d="m17.66 17.66 1.41 1.41"></path><path d="M2 12h2"></path><path d="M20 12h2"></path><path d="m6.34 17.66-1.41 1.41"></path><path d="m19.07 4.93-1.41 1.41"></path></svg></button></div></nav></div></header> <main class="flex flex-grow flex-col gap-4"> <section class="container mt-12 flex flex-col gap-4"> </section></main> <footer class="py-38 bottom-0 flex h-52 w-full flex-col items-center justify-between gap-4 bg-primary/10 backdrop-blur-sm"><div class="container flex flex-row items-center justify-between gap-4 pt-8 font-mono text-xl text-primary" data-svelte-h="svelte-tz8eb5"><span></span> <div class="flex flex-row items-center gap-1"><span class="opacity-25">Mizuchi</span> <span class="opacity-40">Labs</span></div></div> <div class="container flex flex-row items-center justify-between gap-4 border-t border-primary/25 py-4"> <div class="flex flex-row items-center gap-1 text-muted-foreground"><iconify-icon icon="fa-regular:copyright" width="16"></iconify-icon> <span class="font-mono text-xs">2024 Mizuchi Labs</span></div>  <div class="flex flex-row items-center gap-2" data-svelte-h="svelte-8hk7qz"><span class="font-mono text-sm italic text-muted-foreground">Made with</span> <iconify-icon icon="fluent-emoji-flat:dragon-face" width="24"></iconify-icon></div></div></footer></div> 
 			
 			<script>
 				{
-					__sveltekit_1r656wn = {
+					__sveltekit_rufzbn = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -43,8 +43,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D7vNE9UR.js"),
-						import("./_app/immutable/entry/app.C7J6XbCt.js")
+						import("./_app/immutable/entry/start.CN3voaoG.js"),
+						import("./_app/immutable/entry/app.-CQDLcP4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
